--- a/style.css
+++ b/style.css
@@ -11,5 +11,5 @@
   background-color: white;
   border: solid;
   border-radius: 20px;
-  border-color: "#BEC23F";
+  border-color:rgb(221,210,59);
 }
