--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 .description {
   margin-left: 20%;
   margin-right: 20%;
+  margin-top: 100%;
   padding: 10px;
   background-color: white;
   border: solid;
