--- a/style.css
+++ b/style.css
@@ -14,3 +14,8 @@
   border-radius: 20px;
   border-color:rgb(221,210,59);
 }
+.title{
+  padding-top: 5%;
+  padding-left: 25%;
+  margin-right: 25%;
+}
