--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   border-radius: 20px;
   border-color:rgb(221,210,59);
 }
-h1{
+.title{
   padding-top: 5%;
   padding-left: 25%;
   margin-right: 25%;
