--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@
   border-color:rgb(221,210,59);
 }
 .title{
-  padding-top: 5%;
-  padding-left: 25%;
-  margin-right: 25%;
+  text-align:center;
   color:rgb(108,96,36);
+  letter-spacing: 1.5px
 }
