--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   border-radius: 20px;
   border-color:rgb(221,210,59);
 }
-.title{
+h1{
   text-align:center;
   color:rgb(108,96,36);
   letter-spacing: 1.5px;
