--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
   border-radius: 20px;
   border-color:rgb(221,210,59);
 }
-h1 {
-  text-align: center;
-  text-shadow: 3px 2px green;
+.title {
+  font-family: Arial, Helvetica, sans-serif;
 }
