--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .description {
   margin-left: 20%;
   margin-right: 20%;
-  padding: 5%
+  padding: 10px;
   background-color: white;
   border: solid;
   border-radius: 20px;
